# Symmetrische-Solver-Unsymmetrische-Matrizen

./: Cargo.toml  README.md  final_benchmark_summary.json
octave/: asolver.m  bicgstab.m  cg.m  gmres.m  lu_pivot.m  main.m  solve_normal_eq.m
rust/: Cargo.toml
rust/src/: main.rs
solver/: Cargo.toml  test.json
solver/benches/: cg_benchmark.rs
solver/src/: config.rs  errors.rs  io.rs  main.rs  reporting.rs  solver.rs
solver/src/solvers/: bicgstab.rs  cg.rs  cgne.rs  gmres.rs  lu.rs  mod.rs
testrunner/: Cargo.toml
testrunner/src/: main.rs
tests/: sym-small-1.json  sym-small2.json  sym-small3.json  sym-small4.json  sym-small5.json  test1.json  test2.json  test3.json  test4.json
