[package]
name = "sym_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1" }
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
flate2 = "1.1.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
matrix-market-rs = "0.1.3"
tempfile = "3.20.0"
[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "cg_benchmark"
harness = false
