[package]
name = "sym_solver"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
ndarray = { version = "0.16.1" }
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
flate2 = "1.1.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
matrix-market-rs = "0.1.3"
tempfile = "3.20.0"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.43", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
# For structured logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# For progress bars and spinners
indicatif = "0.18.0"
dirs-next = "2.0"
[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "cg_benchmark"
harness = false
